08_saga/manifests/03_ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: checkoutservice
  labels:
    app: checkoutservice
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /api/checkoutservice
            pathType: Prefix
            backend:
              service:
                name: checkoutservice
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orderservice
  labels:
    app: orderservice
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /api/orderservice
            pathType: Prefix
            backend:
              service:
                name: orderservice
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cartservice
  labels:
    app: cartservice
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /api/cartservice
            pathType: Prefix
            backend:
              service:
                name: cartservice
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stockservice
  labels:
    app: stockservice
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /api/stockservice
            pathType: Prefix
            backend:
              service:
                name: stockservice
                port:
                  number: 8080
